# Cybersecurity-Project-xi

./: .gitattributes  .gitignore  README.md
FileIntegrityChecker/: .gitignore  CMakeLists.txt  Makefile  README.md  USAGE.md  build.bat  build.ps1  build_fallback.bat  demo.bat  run.bat  run.ps1  test.ps1
FileIntegrityChecker/include/: FileHasher.h  FileHasherFallback.h  FileManager.h  IntegrityChecker.h
FileIntegrityChecker/src/: FileHasher.cpp  FileHasherFallback.cpp  FileManager.cpp  IntegrityChecker.cpp  build.bat  build.ps1  main.cpp  main_fallback.cpp
MM-CT-DAS/: README.md
Port_Scanner/: main.py
Port_Scanner/scanner/: __init__.py  (+1 more)
ThreatFusion/: README.md  run.py
malware-detection-dashboard/: compile_malware_detector.bat  create_sample_model.py  index.html  malware_detector.cpp  run_simple_detector.bat  setup_onnx_runtime.ps1  simple_malware_detector.cpp  start_full_malware_detection.bat
network_packet_sniffer/: README.md  config.py  list_interfaces.py  main.py  requirements.txt
password_strength_checker/: README.md  config.py  logger.py  main.py
phishing _detection_system/: integration_test.py
phishing detection system/: README.md  RUN.bat  START_SYSTEM.bat  system_status.py
phishing_detection_system/: README.md  go.mod  test_api.py
port_scanner/: README.md  Workflow.md  config.py  demo.py  main.py  requirements.txt
port_scanner_v1/: README.md  config.py
ssl_tls_scanner/: EXECUTABLE_COMPLETE_GUIDE.md  main.py  main_cli.py  readme.md  requirements.txt  run_scanner.bat  sample_hostnames.txt  setup.bat  setup.py  ssl_tls_scanner.spec
(+57 files in other folders)
